fix: navbar height and product-image zoom on mobile screens

--- a/Web/static/styles/components/_menu.scss
+++ b/Web/static/styles/components/_menu.scss
@@ -1,7 +1,7 @@
 .menu{
   position: fixed;
   left: 0;
-  top: 15%;
+  top: $nav-bar-height*1.5;
   // width: 30%;
   border: 1px solid $primary-color;
   border-top: none;
