--- a/Web/static/styles/components/_nav.scss
+++ b/Web/static/styles/components/_nav.scss
@@ -4,7 +4,7 @@ nav{
   display: flex;
   justify-content: space-around;
   padding: 15px 0;
-  height: 10%;
+  height: $nav-bar-height;
   position: fixed;
   z-index: 10;
   top: 0;
@@ -29,7 +29,7 @@ nav{
   bottom: 0;
   transform: translateY(100%);
   width: 100%;
-  height: 5vh;
+  height: $nav-bar-height/2;
   display: flex;
   flex-direction: row;
   justify-content: center;
