--- a/Web/static/styles/components/_productImage.scss
+++ b/Web/static/styles/components/_productImage.scss
@@ -1,10 +1,10 @@
 .product-image {
   width: 50%;
   position: relative;
-  z-index: 10;
+  z-index: 5;
+  border: 1px solid $primary-color;
   img{
-    border: 1px solid $primary-color;
-    margin: 10px 0;
+    // margin: 10px 0;
     width: 100%;
   }
   @media screen and (max-width: 425px) {
