--- a/Web/static/styles/components/_slides.scss
+++ b/Web/static/styles/components/_slides.scss
@@ -47,6 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: translateY(-1px);
 }
 .slide-controller{
   position: absolute;
